datasets/dataset_txt/pipenv/pipenv_2271.txt
schlenk commented on 14 Jul 2017 •
edited
I have no idea what happens here.
Totally trivial project with one dependency, otherwise empty. Now i run 'pipenv' to install, which works just fine. Then i run 'pipenv shell' to run a python shell in the venv. Any interactive command is greeted with a SyntaxError exception, even trivial stuff like import sys or print 1.
If i activate the venv directly via the Scripts\activate.ps1 script in the venv, everything works as expected.
This is a naked Python 2.7.13 x64 install on a Windows Server 2012R2 with the default powershell, no packages installed at all. No special shell wrappers or anything nasty installed as far as i can see. The only thing modified is the prompt to show the venv that is active, but the bug happens without that mod too.
PS  C:\pipenv_test> cat Pipfile
[[source]]
url = "https://pypi.python.org/simple"
verify_ssl = true

[packages]
requests = "*"
PS  C:\pipenv_test> pipenv --version
pipenv, version 5.1.2
PS  C:\pipenv_test> pew version
0.1.26
PS  C:\pipenv_test> C:\Python27amd64\python.exe --version
Python 2.7.13
PS  C:\pipenv_test> pipenv --python=C:\Python27amd64\python.exe install
Creating a virtualenv for this project...
Using C:\Python27amd64\python.exe to create virtualenv...
Running virtualenv with interpreter C:\Python27amd64\python.exe
New python executable in c:\venvs\pipenv_test-O9HVN3Wq\Scripts\python.exe
Installing setuptools, pip, wheel...done.

Virtualenv location: c:\venvs\pipenv_test-O9HVN3Wq
No package provided, installing all dependencies.
Pipfile found at C:\pipenv_test\Pipfile. Considering this to be the project home.
Pipfile.lock not found, creating...
Locking [dev-packages] dependencies...
Locking [packages] dependencies...
Updated Pipfile.lock!
Installing dependencies from Pipfile.lock...
[================================] 5/5 - 00:00:09
To activate this project's virtualenv, run the following:
 $ pipenv shell
PS  C:\pipenv_test> pipenv shell
Launching subshell in virtual environment. Type 'exit' to return.
Windows PowerShell
Copyright (C) 2014 Microsoft Corporation. Alle Rechte vorbehalten.

PS {VENV: pipenv_test-O9HVN3Wq} C:\pipenv_test> python --version
Python 2.7.13
PS {VENV: pipenv_test-O9HVN3Wq} C:\pipenv_test> python
Python 2.7.13 (v2.7.13:a06454b1afa1, Dec 17 2016, 20:53:40) [MSC v.1500 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> print 1
  File "<stdin>", line 1
    print 1
           ^
SyntaxError: invalid syntax
BUT in the same shell (right after the strange behaviour above) this works just fine:
PS  C:\pipenv_test> pipenv --venv
c:\venvs\pipenv_test-O9HVN3Wq
PS  C:\pipenv_test> . C:\venvs\pipenv_test-O9HVN3Wq\Scripts\activate.ps1
(pipenv_test-O9HVN3Wq) PS {VENV: pipenv_test-O9HVN3Wq} C:\pipenv_test> python
Python 2.7.13 (v2.7.13:a06454b1afa1, Dec 17 2016, 20:53:40) [MSC v.1500 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> print 1
1
>>> ^Z